--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -215,6 +215,7 @@
     .nav-link.show,
     .nav-link.active {
       color: $navbar-light-active-color;
+      background: $navbar-light-active-background-color;
     }
   }
 
